# gitdiagram

./: .env.example  CLAUDE.md
backend/: pyproject.toml
backend/app/routers/: generate.py
backend/app/services/: anthropic_service.py  model_config.py  pricing.py
backend/tests/: test_generate_router.py  test_pricing.py
